--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.1.14",
+    "vite": "^7.1.11",
     "vue-tsc": "^3.1.0"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
   }
 }
